# rapsinews_api

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.redis.yml  docker-compose.yml  env_example  pyproject.toml
nginx/: default.conf
rapsinews_api/: manage.py
rapsinews_api/api/: admin.py  apps.py  cache.py  models.py  scheduler.py  urls.py  views.py
rapsinews_api/api/management/commands/: clear_posts.py  fetch_rss.py  start_scheduler.py
rapsinews_api/api/migrations/: 0002_post_image.py
rapsinews_api/banners/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
rapsinews_api/banners/migrations/: 0001_initial.py  0002_image_remove_banner_images_banner_images.py  0003_banner_is_active_banner_title.py  0004_image_name.py
rapsinews_api/posts/: apps.py  cache.py  models.py  views.py
rapsinews_api/posts/management/commands/: fetch_rss.py
rapsinews_api/posts/migrations/: 0001_initial.py  0002_post_image.py
rapsinews_api/rapsinews_api/: asgi.py  settings.py  urls.py  wsgi.py
