[project]
name = "rapwinews-api"
version = "0.1.0"
description = "ФAPI for RAPSI mobile app"
authors = [
    {name = "Satkov",email = "g.satkov@mail.ru"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
