[project]
name = "rapsinews_api"
version = "0.1.0"
description = "API for RAPSI mobile app"
authors = [
    {name = "Satkov",email = "g.satkov@mail.ru"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "django (==5.1)",
    "djangorestframework (>=3.15,<4.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "django-apscheduler (>=0.7.0,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
redis-tools = "^0.0.2"
flake8 = "^7.2.0"

